Adding get user lang and name API.

--- a/app/templates/tv/channelList.html
+++ b/app/templates/tv/channelList.html
@@ -1,3 +1,4 @@
-<ul>
+<div ui-view><ul>
   <li ng-repeat="item in channelList | orderBy:'channel_number'">{{ item.channel_number }}</li>
 </ul>
+</div>
